tests/NormalTests/paczka1/fuzzy1/36032217.err
Error in line 4: jnkHHA A205 29,0
Error in line 6: jnkHHA A765 53,81
Error in line 10: Ty8 A765 12,1
Error in line 5: jnkHHA A765 111,7
Error in line 15: R2LxL4mA A765 37,4
Error in line 11: A765 A174 52,9
Error in line 22: pR3W8N A765 39,0
Error in line 21: jnkHHA A174 90,1
Error in line 27: pR3W8N A205 91,4
